--- a/dummy_servicenow_data.json
+++ b/dummy_servicenow_data.json
@@ -3,7 +3,7 @@
     "u_service_offering_link": "https://cisco.service-now.com/api/now/table/u_business_service_component/ec9338d3db8aa0d090b8a90b8a96194d",
     "u_service_offering_value": "ec9338d3db8aa0d090b8a90b8a96194d",
     "number": "INC00241059",
-    "Incident_Summary": "Distribution Dashboard",
+    "Incident_Summary": "Distribution",
     "Incident_Task":"ITASK101",
     "u_purpose": null,
     "Incident_Task_Status":"Progress",
